# ray-trace-port

./: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  RTv1  correction.txt  cylinder_1  cynlinder_2
.devcontainer/: Dockerfile
libft/: CMakeLists.txt  Makefile  author  ft_arrdel.c  ft_atoi.c  ft_bzero.c  ft_dbarrdel.c  ft_dbarrnew.c  ft_ftarrdel.c  ft_ftarrnew.c  ft_intarrnew.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strarrdel.c  (+29 more)
rs_rt/: Cargo.toml
rs_rt/src/: main.rs
rt/: CMakeLists.txt  cone_1  cone_2  cylinder_1_2  cylinder_1_fresnel  cylinder_1_reflect  libft.h
rt/includes/: rt.h
rt/srcs/: anti_aliasing.c  anti_aliasing_2.c  cal.c  calc.c  calc_1.c  calc_2.c  camera.c  camera_2.c  cartoon.c  cartoon_2.c  cartoon_seq.c  check.c  check_2.c  cone.c  cone_2.c  cylinder.c  cylinder_2.c  draw.c  draw_2.c  generate.c  interface.c  intersection.c  light.c  normal.c  object_colors.c  object_colors_2.c  objects.c  plane.c  progess.c  read.c  reflection.c  refraction.c  scale.c  sequence.c  sequence_2.c  sphere.c  sphere_2.c  texture.c  texture_2.c  threads.c
rt_orig/: CMakeLists.txt  cone_2  libft.h  map_example  sphere_3  sphere_4
rt_orig/includes/: rt.h
rt_orig/srcs/: anti_aliasing.c  anti_aliasing_2.c  calc_1.c  calc_2.c  camera_2.c  cartoon.c  check_2.c  cone.c  cone_2.c  draw_2.c  intersection.c  main.c  normal.c  object_colors.c  perlin.c  plane.c  progess.c  reflection.c  rotation.c  sphere_2.c  texture.c
rt_orig/tests/: test.c
rt_rs/: CMakeLists.txt  Cargo.toml  build.rs
rt_rs/src/: camera.rs  cartoon.rs  circle.rs  colour.rs  cone.rs  cylinder.rs  data_extraction.rs  fresnel.rs  interaction.rs  lib.rs  light.rs  object.rs  perlin.rs  pixel.rs  plane.rs  ray.rs  reflection.rs  refraction.rs  sequence.rs  texture.rs  vec3_calc.rs  vec4_calc.rs  world.rs
srcs/: calc.c  cartoon_2.c  cartoon_seq.c  check.c  cylinder.c  draw_2.c  object_colors.c  objects.c  sequence_2.c  translation.c
