[package]
name = "rt_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "1.0.0"
libc = "0.2.133"
sdl2 = "0.35.2"

[dependencies.glam]
version = "0.21.3"
features = ["serde"]

[dependencies.serde]
features=["derive"]

[lib]
crate-type=["staticlib"]

[build-dependencies]
cbindgen = "0.24.3"
